--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -24,6 +24,7 @@ $main-margin-tablet: 20px 100px;
 $desktop-gap: 140px;
 
 //Брейкпоинты
+$mobile-breakpoint-small: 429px;
 $mobile-breakpoint-min: 431px;
 $mobile-breakpoint-medium: 480px;
 $mobile-breakpoint-large: 680px;
